# ecewo-mock

./: CMakeLists.txt  README.md  makefile
src/: ecewo-mock.c  ecewo-mock.h
